--- a/index.html
+++ b/index.html
@@ -24,20 +24,83 @@
         </section>
 
         <section class="box">
-          <h2>TEMA: Evolução: Improvisar, adaptar, mudar.</h2>
-            <p><strong>bla bla vla bla bla bla</strong></p>
-          </div>
+            <h2 class="theme-title">TEMA: Evolução: Improvisar, adaptar, mudar.</h2>
+                <p><strong>Um conceito, três ações. Use estas palavras como uma faísca para sua criatividade. Elas podem guiar sua mecânica, sua história ou sua arte. A forma como essa inspiração se manifesta em seu jogo será parte do que iremos celebrar e avaliar.</strong></p>
+            </div>
         </section>
 
-        <section class="box"  onclick="toggleBox(this)">
-          <h2>Uma Introdução Sobre Game Jam (Para Iniciantes) <span class="toggle-icon"></span></h2>
-           <div class="box-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.</p>
-           </div>
+        <section class="box" onclick="toggleBox(this)">
+            <h2>Introdução <span class="toggle-icon"></span></h2>
+            <div class="box-content">
+                <h3 class="subsection-title">Bem-vindo ao Mundo das Game Jams</h3>
+
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Introdução: O que é uma Game Jam?</h4>
+                    <p>Game Jams são eventos de desenvolvimento de jogos, funcionando como maratonas criativas. Nesses eventos, os participantes se reúnem, de forma presencial ou online, para criar um jogo do zero dentro de um prazo curto e determinado, que geralmente varia de 48 horas a uma semana.</p>
+
+                    <p>O objetivo principal não é criar um produto comercialmente polido, mas sim focar em:</p>
+                    <ul class="intro-list">
+                        <li><strong>Aprendizagem Acelerada:</strong> A pressão do tempo e o foco em um único projeto intensificam o aprendizado de novas ferramentas e técnicas.</li>
+                        <li><strong>Experimentação:</strong> É um ambiente seguro para testar ideias inovadoras e mecânicas de jogo fora do comum.</li>
+                        <li><strong>Colaboração:</strong> Promove a conexão entre desenvolvedores, artistas, designers e outros entusiastas, incentivando o trabalho em equipe.</li>
+                        <li><strong>Conclusão de Projetos:</strong> O maior desafio é gerenciar o escopo para entregar um jogo funcional no final do prazo. Um protótipo simples e completo é mais valioso que um projeto ambicioso e inacabado.</li>
+                    </ul>
+                </div>
+
+                <hr class="cronograma-divider">
+
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">O Tema: A Bússola Criativa</h4>
+                    <p>No início da Jam, um tema é revelado para servir como um guia criativo. A interpretação do tema é aberta e um dos primeiros desafios do evento. Um tema como "Profundezas", por exemplo, pode ser interpretado de várias maneiras:</p>
+                    <ul class="theme-examples">
+                        <li><strong>Literal:</strong> Um jogo sobre explorar as profundezas do oceano ou de uma caverna.</li>
+                        <li><strong>Mecânica:</strong> Uma mecânica de jogo baseada em cavar ou em camadas que o jogador precisa atravessar.</li>
+                        <li><strong>Narrativa:</strong> Uma história que explora as "profundezas" da psique de um personagem ou um mistério.</li>
+                        <li><strong>Invertida:</strong> Um jogo onde o jogador é uma criatura das profundezas, evitando exploradores da superfície.</li>
+                    </ul>
+                    <p class="attention-text">Uma prática recomendada é dedicar a primeira hora após a revelação do tema para um brainstorming, explorando diferentes interpretações antes de decidir por um conceito.</p>
+                </div>
+
+                <hr class="cronograma-divider">
+
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Grupo: Em equipe ou solo?</h4>
+                    <p>É possível participar de uma Game Jam sozinho, mas a colaboração em equipe pode enriquecer a experiência e o resultado final.</p>
+
+                    <h5 class="sub-rule-heading">1. Trabalho em Equipe</h5>
+                    <p>Formar um grupo eficiente é um dos principais fatores para o sucesso. É crucial que a organização considere a distribuição de tarefas entre os integrantes.</p>
+                    <p>Definição de Papéis:</p>
+                    <ul class="roles-list">
+                        <li><strong>Programador(a):</strong> Responsável por escrever o código que dará vida ao jogo, implementando as mecânicas, os controles e a lógica geral.</li>
+                        <li><strong>Artista (2D/3D):</strong> Cria todos os elementos visuais, como personagens, cenários, interface do usuário (UI) e animações.</li>
+                        <li><strong>Game Designer:</strong> Foca na experiência do jogador. Projeta as regras, os níveis, a progressão e garante que o jogo seja divertido e coeso. Em equipes pequenas, esse papel costuma ser compartilhado.</li>
+                        <li><strong>Designer de Som / Músico(a):</strong> Cria os efeitos sonoros que dão feedback ao jogador e compõe a trilha sonora que estabelece o clima do jogo.</li>
+                    </ul>
+
+                    <h5 class="sub-rule-heading">2. Gerenciamento do Escopo</h5>
+                    <p>A decisão mais crítica que uma equipe deve tomar é sobre o escopo do jogo — ou seja, seu tamanho e complexidade. O ideal é focar na mecânica principal e garantir que ela funcione perfeitamente. Elementos extras só devem ser adicionados se houver tempo.</p>
+
+                    <h5 class="sub-rule-heading">3. Comunicação</h5>
+                    <p>Uma comunicação clara e constante é essencial. Utilizem ferramentas como o Discord para manter todos sincronizados, tomar decisões rápidas e garantir que a visão do jogo permaneça unificada.</p>
+                </div>
+
+                <hr class="cronograma-divider">
+
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Dicas Essenciais para a Maratona</h4>
+                    <ul class="tips-list">
+                        <li><strong>Descanse:</strong> É uma maratona, não uma corrida de 100 metros. Horas adequadas de sono resultam em maior produtividade e menos bugs.</li>
+                        <li><strong>Mantenha-se Hidratado e Alimentado:</strong> O bem-estar físico impacta diretamente a capacidade de resolver problemas e manter a criatividade.</li>
+                        <li><strong>Faça Pausas Regulares:</strong> Afastar-se do projeto por alguns minutos ajuda a clarear as ideias e a encontrar soluções para problemas complexos.</li>
+                        <li><strong>Esteja Pronto para Imprevistos:</strong> Bugs acontecerão e algumas ideias não funcionarão como planejado. A capacidade de se adaptar e simplificar o projeto quando necessário é uma habilidade valiosa.</li>
+                    </ul>
+                    <p>É por isso que o espírito da Game Jam está na criação, na colaboração e na superação do desafio de concluir um projeto. Ao final, a maior recompensa é a experiência adquirida e a satisfação de ter criado algo novo.</p>
+                </div>
+            </div>
         </section>
 
         <section class="box">
-          <h2>Cronograma</h2>
+          <h2>CRONOGRAMA</h2>
               <div class="cronograma-item">
                   <h4 class="rule-heading">Início da Jam e Revelação do Tema</h4>
                   <p><span class="date-time">Sexta, 18 de Julho | 13:30</span></p>
@@ -86,7 +149,7 @@
 
 
         <section class="box">
-            <h2>Regras de Participação</h2>
+            <h2>REGRAS DE PARTICIPAÇÃO</h2>
                 <div class="cronograma-item">
                    <h4 class="rule-heading">Seção 1: O que eu posso usar?</h4>
                     <p> <span class="date-time">Aqui listamos as ferramentas, recursos e tecnologias que vocês podem utilizar para dar vida ao seu projeto durante a jam.</span></p>
@@ -150,21 +213,33 @@
         </section>
 
         <section class="box" onclick="toggleBox(this)">
-          <h2>Premios <span class="toggle-icon"></span></h2>
+          <h2>PRMIAÇÕES E CATEGORIAS <span class="toggle-icon"></span></h2>
           <div class="box-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+              <p>Ao final da nossa jornada de 16 dias, teremos um evento de encerramento descontraído para que todas as equipes possam apresentar seus jogos, compartilhar suas experiências e celebrar o incrível trabalho de todos.</p>
+
+              <ul class="prize-categories">
+                  <li><h3 class="rule-heading">Melhor Jogo:</h3> <p>Para o projeto mais completo e divertido (Avaliação da Organização).</p></li>
+                  <li><h3 class="rule-heading">Direção de Arte Cativante:</h3> <p>Para o jogo com o visual mais único e marcante.</p></li>
+                  <li><h3 class="rule-heading">Mecânica Interessante:</h3> <p>Para a ideia de gameplay mais criativa e inovadora.</p></li>
+                  <li><h3 class="rule-heading">Queridinho do Povo:</h3> <p>Para o jogo mais votado pela comunidade de participantes.</p></li>
+              </ul>
+
+              <h3 class="rule-heading">Os prêmios:</h3>
+              <p class="attention-text prize-text">Os vencedores levarão para casa troféus simbólicos, doces e, claro, o eterno de se gabar!</p>
+
+              <p class="note-text">(Fiquem atentos! Dependendo do andamento do evento, mais categorias surpresa poderão surgir.)</p>
           </div>
-        </section>
+      </section>
 
         <section class="box" onclick="toggleBox(this)">
-          <h2>Método de Submissão <span class="toggle-icon"></span></h2>
+          <h2>MÉTODO DE SUBMISSÃO<span class="toggle-icon"></span></h2>
           <div class="box-content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.</p>
           </div>
         </section>
 
         <section class="box" onclick="toggleBox(this)">
-          <h2>Canal de Contato <span class="toggle-icon">+</span></h2>
+          <h2>CANAL DE COTNATO <span class="toggle-icon"></span></h2>
           <div class="box-content">
             <p>
               Ficou com alguma dúvida ou precisa de ajuda? <br>
