--- a/index.html
+++ b/index.html
@@ -30,71 +30,51 @@
         </section>
 
         <section class="box" onclick="toggleBox(this)">
-            <h2>Introdução <span class="toggle-icon"></span></h2>
+            <h2>Uma Introdução Sobre Game Jam (Para Iniciantes) <span class="toggle-icon"></span></h2>
+                <h3 class="rule-heading">Nunca participou de uma game jam? Sem problemas! Aqui vão algumas dicas para começar com o pé direito</h3>
             <div class="box-content">
                 <h3 class="subsection-title">Bem-vindo ao Mundo das Game Jams</h3>
 
                 <div class="cronograma-item">
                     <h4 class="rule-heading">Introdução: O que é uma Game Jam?</h4>
-                    <p>Game Jams são eventos de desenvolvimento de jogos, funcionando como maratonas criativas. Nesses eventos, os participantes se reúnem, de forma presencial ou online, para criar um jogo do zero dentro de um prazo curto e determinado, que geralmente varia de 48 horas a uma semana.</p>
+                    <p>
+                        É uma maratona de desenvolvimento de jogos. O foco é na criatividade e na experimentação dentro de um prazo e um tema. Não se preocupe em criar o próximo grande sucesso; o objetivo é concluir um protótipo e aprender muito no processo.
+                    </p>
 
-                    <p>O objetivo principal não é criar um produto comercialmente polido, mas sim focar em:</p>
+                    <!-- <p>O objetivo principal não é criar um produto comercialmente polido, mas sim focar em:</p>
                     <ul class="intro-list">
                         <li><strong>Aprendizagem Acelerada:</strong> A pressão do tempo e o foco em um único projeto intensificam o aprendizado de novas ferramentas e técnicas.</li>
                         <li><strong>Experimentação:</strong> É um ambiente seguro para testar ideias inovadoras e mecânicas de jogo fora do comum.</li>
                         <li><strong>Colaboração:</strong> Promove a conexão entre desenvolvedores, artistas, designers e outros entusiastas, incentivando o trabalho em equipe.</li>
                         <li><strong>Conclusão de Projetos:</strong> O maior desafio é gerenciar o escopo para entregar um jogo funcional no final do prazo. Um protótipo simples e completo é mais valioso que um projeto ambicioso e inacabado.</li>
-                    </ul>
+                    </ul> -->
                 </div>
 
                 <hr class="cronograma-divider">
 
                 <div class="cronograma-item">
-                    <h4 class="rule-heading">O Tema: A Bússola Criativa</h4>
-                    <p>No início da Jam, um tema é revelado para servir como um guia criativo. A interpretação do tema é aberta e um dos primeiros desafios do evento. Um tema como "Profundezas", por exemplo, pode ser interpretado de várias maneiras:</p>
-                    <ul class="theme-examples">
+                    <h4 class="rule-heading">Como interpretar o tema?</h4>
+                    <p>Não existe resposta certa! A frase-tema é um ponto de partida. Façam um <strong>brainstorm</strong> que mecânicas de jogo ela sugere? Que tipo de história? Que sentimentos ela provoca? O tema pode ser o centro do jogo ou apenas um detalhe sutil.</p>
+                    <!-- <ul class="theme-examples">
                         <li><strong>Literal:</strong> Um jogo sobre explorar as profundezas do oceano ou de uma caverna.</li>
                         <li><strong>Mecânica:</strong> Uma mecânica de jogo baseada em cavar ou em camadas que o jogador precisa atravessar.</li>
                         <li><strong>Narrativa:</strong> Uma história que explora as "profundezas" da psique de um personagem ou um mistério.</li>
                         <li><strong>Invertida:</strong> Um jogo onde o jogador é uma criatura das profundezas, evitando exploradores da superfície.</li>
                     </ul>
-                    <p class="attention-text">Uma prática recomendada é dedicar a primeira hora após a revelação do tema para um brainstorming, explorando diferentes interpretações antes de decidir por um conceito.</p>
+                    <p class="attention-text">Uma prática recomendada é dedicar a primeira hora após a revelação do tema para um brainstorming, explorando diferentes interpretações antes de decidir por um conceito.</p> -->
                 </div>
 
                 <hr class="cronograma-divider">
 
                 <div class="cronograma-item">
-                    <h4 class="rule-heading">Grupo: Em equipe ou solo?</h4>
-                    <p>É possível participar de uma Game Jam sozinho, mas a colaboração em equipe pode enriquecer a experiência e o resultado final.</p>
-
-                    <h5 class="sub-rule-heading">1. Trabalho em Equipe</h5>
-                    <p>Formar um grupo eficiente é um dos principais fatores para o sucesso. É crucial que a organização considere a distribuição de tarefas entre os integrantes.</p>
-                    <p>Definição de Papéis:</p>
-                    <ul class="roles-list">
-                        <li><strong>Programador(a):</strong> Responsável por escrever o código que dará vida ao jogo, implementando as mecânicas, os controles e a lógica geral.</li>
-                        <li><strong>Artista (2D/3D):</strong> Cria todos os elementos visuais, como personagens, cenários, interface do usuário (UI) e animações.</li>
-                        <li><strong>Game Designer:</strong> Foca na experiência do jogador. Projeta as regras, os níveis, a progressão e garante que o jogo seja divertido e coeso. Em equipes pequenas, esse papel costuma ser compartilhado.</li>
-                        <li><strong>Designer de Som / Músico(a):</strong> Cria os efeitos sonoros que dão feedback ao jogador e compõe a trilha sonora que estabelece o clima do jogo.</li>
-                    </ul>
-
-                    <h5 class="sub-rule-heading">2. Gerenciamento do Escopo</h5>
-                    <p>A decisão mais crítica que uma equipe deve tomar é sobre o escopo do jogo — ou seja, seu tamanho e complexidade. O ideal é focar na mecânica principal e garantir que ela funcione perfeitamente. Elementos extras só devem ser adicionados se houver tempo.</p>
-
-                    <h5 class="sub-rule-heading">3. Comunicação</h5>
-                    <p>Uma comunicação clara e constante é essencial. Utilizem ferramentas como o Discord para manter todos sincronizados, tomar decisões rápidas e garantir que a visão do jogo permaneça unificada.</p>
-                </div>
-
-                <hr class="cronograma-divider">
-
-                <div class="cronograma-item">
-                    <h4 class="rule-heading">Dicas Essenciais para a Maratona</h4>
-                    <ul class="tips-list">
+                    <h4 class="rule-heading">Dica de Ouro: Pense Pequeno!</h4>
+                    <!-- <ul class="tips-list">
                         <li><strong>Descanse:</strong> É uma maratona, não uma corrida de 100 metros. Horas adequadas de sono resultam em maior produtividade e menos bugs.</li>
                         <li><strong>Mantenha-se Hidratado e Alimentado:</strong> O bem-estar físico impacta diretamente a capacidade de resolver problemas e manter a criatividade.</li>
                         <li><strong>Faça Pausas Regulares:</strong> Afastar-se do projeto por alguns minutos ajuda a clarear as ideias e a encontrar soluções para problemas complexos.</li>
                         <li><strong>Esteja Pronto para Imprevistos:</strong> Bugs acontecerão e algumas ideias não funcionarão como planejado. A capacidade de se adaptar e simplificar o projeto quando necessário é uma habilidade valiosa.</li>
-                    </ul>
-                    <p>É por isso que o espírito da Game Jam está na criação, na colaboração e na superação do desafio de concluir um projeto. Ao final, a maior recompensa é a experiência adquirida e a satisfação de ter criado algo novo.</p>
+                    </ul> -->
+                    <p>A maior armadilha é ter uma ideia grandiosa demais para o tempo disponível. Foquem em <strong>uma mecânica principal</strong> e façam ela funcionar bem. É melhor ter um jogo curto e completo do que um projeto enorme e inacabado. Divirtam-se com o escopo que vocês têm!</p>
                 </div>
             </div>
         </section>
@@ -225,27 +205,100 @@
               </ul>
 
               <h3 class="rule-heading">Os prêmios:</h3>
-              <p class="attention-text prize-text">Os vencedores levarão para casa troféus simbólicos, doces e, claro, o eterno de se gabar!</p>
+              <p class="attention-text prize-text">Os vencedores levarão para casa troféus simbólicos, doces e, claro, o eterno direito de se gabar!</p>
 
               <p class="note-text">(Fiquem atentos! Dependendo do andamento do evento, mais categorias surpresa poderão surgir.)</p>
           </div>
       </section>
 
         <section class="box" onclick="toggleBox(this)">
-          <h2>MÉTODO DE SUBMISSÃO<span class="toggle-icon"></span></h2>
-          <div class="box-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.</p>
-          </div>
+            <h2>MÉTODO DE SUBMISSÃO<span class="toggle-icon"></span></h2>
+            <div class="box-content">
+                <p>Chegou a hora de compartilhar sua criação com o mundo! Para garantir que tudo corra bem, centralizamos todo o processo de submissão em um único lugar. Siga os passos abaixo com atenção.</p>
+                <p class="attention-text prize-text">O prazo final para envio é domingo, 03 de Agosto, às 23:59!</p>
+
+                <hr class="cronograma-divider">
+
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Passo 1: Preencha o Formulário Oficial</h4>
+                    <p>
+                        Todas as informações sobre sua equipe e seu jogo serão coletadas através do nosso <strong>Formulário Google Oficial: <a href="https://forms.gle/Rru89d85bhCvFPCy8" target="_blank" class="external-link">[FORMULÁRIO]</a></strong>
+                    </p>
+
+                    <p>Tenha em mãos as seguintes informações para preencher os campos:</p>
+                    <ul class="intro-list">
+                        <li><strong>Dados da Equipe:</strong> Nome da equipe, nome completo dos integrantes e o telefone de um representante.</li>
+                        <li><strong>Dados do Jogo:</strong> Título do projeto, a engine utilizada e uma sinopse caprichada (explicando o que é o jogo e qual sua relação com o tema).</li>
+                    </ul>
+                </div>
+
+                <hr class="cronograma-divider">
+
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Passo 2: Prepare e Compartilhe seu Jogo</h4>
+                    <p>No formulário, haverá um campo para você colocar o link do seu jogo. Você pode escolher uma das duas opções abaixo:</p>
+
+                    <h5 class="sub-rule-heading">Opção A: Build em WebGL (Recomendado)</h5>
+                    <p>Esta opção permite que seu jogo seja executado diretamente no navegador, facilitando para todos jogarem.</p>
+                    <ul class="intro-list">
+                        <li>Gere uma "Build" do seu jogo em formato WebGL.</li>
+                        <li>Faça o upload dos arquivos para uma plataforma de hospedagem gratuita como o <strong>itch.io, Replit, Netlify</strong> ou <strong>GitHub Pages</strong>.</li>
+                        <li>Copie o link público e funcional do seu jogo para colar no formulário.</li>
+                    </ul>
+
+                    <h5 class="sub-rule-heading">Opção B: Arquivo .zip via Google Drive (Para builds de Desktop)</h5>
+                    <p>Se o seu jogo é um executável para Windows, Linux ou macOS.</p>
+                    <ul class="intro-list">
+                        <li>Encontre a pasta da "Build" do seu jogo (a pasta com o arquivo <code>.exe</code> e os outros dados).</li>
+                        <li>Compacte esta pasta inteira em um único arquivo <code>.zip</code>.</li>
+                        <li>Faça o upload deste arquivo <code>.zip</code> para o seu Google Drive.</li>
+                        <li><span class="attention-text"><strong>PASSO MAIS IMPORTANTE:</strong> Clique com o botão direito no arquivo, vá em "Gerar link" e, na janela de permissões, mude de "Restrito" para <strong>"Qualquer pessoa com o link"</strong>. Se pular esta etapa, não conseguiremos baixar e avaliar seu jogo!</span></li>
+                        <li><strong>Teste o link!</strong> Copie e cole em uma janela anônima do seu navegador para confirmar que o download começa sem pedir login.</li>
+                    </ul>
+                </div>
+
+                <hr class="cronograma-divider">
+
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Passo 3: Liste seus Assets</h4>
+                    <p>No formulário, haverá um campo para você fazer o upload de um arquivo (<code>.txt</code> ou <code>.pdf</code>) listando todos os assets de terceiros que sua equipe utilizou (arte, música, sons, etc.).</p>
+
+                    <p>Para cada asset, por favor, inclua:</p>
+                    <ul class="intro-list">
+                        <li>O que é o asset (ex: "Música do Menu Principal").</li>
+                        <li>Onde você o encontrou (ex: "opengameart.org").</li>
+                        <li>O nome do criador/licença (ex: "Criado por ArtistaX, CC-BY 3.0").</li>
+                    </ul>
+                    <p class="note-text">(Caso não tenha utilizado nenhum asset externo, pode subir um arquivo de texto com uma frase motivadora ou um haicai sobre sua experiência na jam!:) )</p>
+                </div>
+            </div>
         </section>
 
         <section class="box" onclick="toggleBox(this)">
-          <h2>CANAL DE COTNATO <span class="toggle-icon"></span></h2>
+          <h2>CANAL DE CONTATO E FICHA TECNICA<span class="toggle-icon"></span></h2>
           <div class="box-content">
-            <p>
-              Ficou com alguma dúvida ou precisa de ajuda? <br>
-              Fale com a organização pelo WhatsApp: 
-              <a href="https://chat.whatsapp.com/LdNm327YxadFA4FX7TC2Tz" target="_blank" class="zap-link">Clique aqui para conversar</a>.
-            </p>
+                <hr class="cronograma-divider">
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Forma de Contato</h4>
+                    <p>
+                        Ficou com alguma dúvida ou precisa de ajuda? <br>
+                        Fale com a organização pelo WhatsApp: 
+                        <a href="https://chat.whatsapp.com/LdNm327YxadFA4FX7TC2Tz" target="_blank" class="zap-link">Clique aqui para conversar</a>.
+                    </p>
+                </div>
+
+                <hr class="cronograma-divider">
+                <div class="cronograma-item">
+                    <h4 class="rule-heading">Ficha Técnica</h4>
+                    <ul class="intro-list">
+                        <li><strong>Coordenação Geral:</strong>Gustavo Domingues, José Lucas, Vitor Vieira, Leticia Zanellatto</li>
+                        <li><strong>Identidade Visual & Design:</strong>Gustavo Domingues</li>
+                        <li><strong>Desenvolvimento Web:</strong>Leticia Zanellatto</li>
+                        <li><strong>Redação & Conteúdo:</strong>Gustavo Domingues, José Lucas</li>
+                    </ul>
+                </div>
+          <div class="box-content">
+            
           </div>
         </section>
 
@@ -256,7 +309,7 @@
         <div class="logos">
             <div class="logo-item">
             <img src="img/labcg.png" alt="Logo LabCG">
-            <p><a href="https://www.instagram.com/labcg_unioeste/" target="_blank">LabCG</a></p>
+            <p><a href="https://linktr.ee/labcg" target="_blank">LabCG</a></p>
             </div>
             <div class="logo-item">
             <img src="img/Logo_do_curso.png" alt="Cienência da Computação">
