--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
               <div class="cronograma-item">
                   <h4 class="rule-heading">Período de Desenvolvimento</h4>
-                  <p><span class="date-time">18 de Julho a 03 de Agosto (16 dias)</span></p>
+                  <p><span class="date-time">18 de Julho a 03 de Setembro</span></p>
                   <ul>
                       <li>Duas semanas e alguns dias para criar, programar e dar vida ao seu jogo.</li>
                   </ul>
@@ -99,7 +99,7 @@
 
               <div class="cronograma-item">
                   <h4 class="rule-heading">Prazo Final para Submissão dos Jogos</h4>
-                  <p><span class="date-time">03 de Agosto (até as 23:59)</span></p>
+                  <p><span class="date-time">07 de Setembro (até as 23:59)</span></p>
                   <ul>
                       <li>O formulário de submissão será fechado pontualmente. Submissões após este horário não serão consideradas.</li>
                   </ul>
@@ -107,7 +107,7 @@
 
               <div class="cronograma-item">
                   <h4 class="rule-heading">Votação Popular</h4>
-                  <p><span class="date-time">06 de Agosto a 08 de Agosto (até as 12:00)</span></p>
+                  <p><span class="date-time">10 a 14 de Setembro (até as 23:59)</span></p>
                   <ul>
                       <li>Janela para as equipes jogarem os projetos dos colegas e votarem na categoria "Queridinho do povo".</li>
                       <li><span class="note-text">(OBS: A votação é feita por equipe, com um voto único via e-mail acadêmico do representante da equipe. Não pode votar no próprio jogo, hein! ;) )</span></li>
@@ -116,10 +116,10 @@
 
               <div class="cronograma-item">
                   <h4 class="rule-heading">Apresentação Final e Premiação</h4>
-                  <p><span class="date-time">Sexta, 08 ou 15 de Agosto | 17:00</span></p>
+                  <p><span class="date-time">19 de Setembro | 17:00</span></p>
                   <ul>
                       <li>O grande evento de encerramento, com a apresentação de todos os jogos e a cerimônia de premiação. O formato será híbrido (presencial no ParqueTec e online).</li>
-                      <li><span class="note-text">(<strong>Nota sobre a data:</strong> E quando será exatamente? Boa pergunta! A data final (dia 08 ou 15) será cravada assim que soubermos quantos jogos teremos. Afinal, é final de semestre acadêmico e a vida é aquela loucura de sempre... A confirmação será divulgada com antecedência.)</span></li>
+                      
                   </ul>
               </div>
 
@@ -155,13 +155,16 @@
                 </div>
                 <hr class="cronograma-divider"> <div class="cronograma-item"> 
                   <h4 class="rule-heading">Seção 2: Regras do Evento</h4>
-                    <p> <span class="date-time"> garantir que nossa game jam seja uma experiência divertida, justa e segura para todos, os participantes devem seguir as regras abaixo.</span></p>
+                    <p> <span class="date-time">Garantir que nossa game jam seja uma experiência divertida, justa e segura para todos, os participantes devem seguir as regras abaixo.</span></p>
 
                         <h5 class="rule-heading">1. Formação das Equipes e Vínculo</h5>
-                        <ul>
-                            <li>As equipes podem ser formadas por 1 (um) a 3 (três) integrantes.</li>
-                            <li>A participação é dedicada para alunos e membros da UNIOESTE - Campus Foz do Iguaçu. Para a participação de membros externos, consultar a organização.</li>
-                        </ul>
+                            <ul>
+                                <li>As equipes podem ser formadas por 1 (um) a 3 (três) integrantes.</li>
+                                <li><s>A participação é dedicada para alunos e membros da UNIOESTE - Campus Foz do Iguaçu. Para a participação de membros externos, consultar a organização.</s></li>
+                                <li><strong>A participação agora é livre para toda a comunidade acadêmica.</strong></li>
+                                <li>Alunos de outras instituições: Para garantir sua vaga, pedimos que entrem em contato com a organização via WhatsApp para confirmar a inscrição (o link está na seção "Canal de Contato").</li>
+                            </ul>
+
 
                         <h5 class="rule-heading">2. Nosso Compromisso: Um Ambiente Seguro e Respeitoso</h5>
                         <p>Acreditamos que a criatividade floresce em um ambiente onde todos se sentem seguros. Portanto, este código de conduta se aplica tanto às <strong>interações entre participantes</strong> quanto ao <strong>conteúdo criado nos jogos</strong>.</p>
@@ -313,7 +316,7 @@
             </div>
             <div class="logo-item">
             <img src="img/Logo_do_curso.png" alt="Cienência da Computação">
-            <p><a href="https://unioeste.br/portal/" target="_blank">Cienência da Computação</a></p>
+            <p><a href="https://unioeste.br/portal/" target="_blank">Ciência da Computação</a></p>
             </div>
             <div class="logo-item">
             <img src="img/unioeste.png" alt="Logo Unioeste">
