datas novas index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
               <div class="cronograma-item">
                   <h4 class="rule-heading">Período de Desenvolvimento</h4>
-                  <p><span class="date-time">18 de Julho a 03 de Setembro</span></p>
+                  <p><span class="date-time">18 de Julho a 07 de Setembro</span></p>
                   <ul>
                       <li>Duas semanas e alguns dias para criar, programar e dar vida ao seu jogo.</li>
                   </ul>
@@ -218,7 +218,7 @@
             <h2>MÉTODO DE SUBMISSÃO<span class="toggle-icon"></span></h2>
             <div class="box-content">
                 <p>Chegou a hora de compartilhar sua criação com o mundo! Para garantir que tudo corra bem, centralizamos todo o processo de submissão em um único lugar. Siga os passos abaixo com atenção.</p>
-                <p class="attention-text prize-text">O prazo final para envio é domingo, 03 de Agosto, às 23:59!</p>
+                <p class="attention-text prize-text">O prazo final para envio é quarta-feira, 07 de Setembro, às 23:59!</p>
 
                 <hr class="cronograma-divider">
 
